[project]
name = "lockin"
version = "0.1.0"
description = "A tool that scrapes investing subreddits, extracts mentioned stock tickers, and visualizes their popularity over time based on frequency and recency."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "ymcx", email = "89810988+ymcx@users.noreply.github.com" }]
dependencies = [
  "matplotlib>=3.10.7",
  "praw>=7.8.1",
  "pytest>=8.4.2",
  "yfinance>=0.2.66",
]

[project.scripts]
lockin = "lockin.main:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
